--- a/src/component/Login.css
+++ b/src/component/Login.css
@@ -1,4 +1,4 @@
-.container{
+/* .container{
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -74,4 +74,4 @@
     font-size:19px ;
     font-weight: 700;
     cursor: pointer;
- }
+ } */
